.deploy/jobfather/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: jobfather
  name: jobfather
  namespace: cicd
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: jobfather
  type: LoadBalancer
